--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@
 /config/credentials/production.key
 config/credentials.yml.enc
 config/database.yml
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
