--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,9 +6,20 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-production:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+amazon_staging:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(:aws, :region) %> # e.g., 'us-east-1'
+  bucket: <%= Rails.application.credentials.dig(:aws, :staging_bucket) %> # Your unique staging bucket name
+
+amazon_production:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(:aws, :region) %> # e.g., 'us-east-1'
+  bucket: <%= Rails.application.credentials.dig(:aws, :production_bucket) %> # Your unique production bucket name
+
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
