--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "dependencies": {
     "leaflet-providers": "^2.0.0",
+    "lucide-react": "^0.544.0",
     "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
-  "scripts": {
-    "build": "npx esbuild app/javascript/react_entry.jsx --bundle --sourcemap --outfile=app/assets/builds/halabytes_react.js --public-path=/assets --loader:.jsx=jsx --loader:.css=css",
-    "build:watch": "npx esbuild app/javascript/react_entry.jsx --bundle --sourcemap --outfile=app/assets/builds/halabytes_react.js --public-path=/assets --loader:.jsx=jsx --loader:.css=css --watch"
-  },
   "devDependencies": {
-    "esbuild": "^0.25.10"
+    "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
+  },
+  "scripts": {
+    "build:js": "npx esbuild app/javascript/react_entry.jsx --bundle --sourcemap --outfile=app/assets/builds/halabytes_react.js --public-path=/assets --loader:.jsx=jsx",
+    "watch:js": "npx esbuild app/javascript/react_entry.jsx --bundle --sourcemap --outfile=app/assets/builds/halabytes_react.js --public-path=/assets --loader:.jsx=jsx --watch",
+    "build:css": "npx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/halabytes_react.css --minify",
+    "watch:css": "npx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/halabytes_react.css --watch",
+    "build": "npm run build:js && npm run build:css"
   }
 }
