--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,8 +5,8 @@ local:
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  #access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %> For Local Dev only
-  #secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %> For Local Dev only
+  #access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %> #For Local Dev only
+  #secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %> #For Local Dev only
   region: <%= ENV["AWS_REGION"] %>
   bucket: <%= ENV["AWS_S3_BUCKET"] %>
 # Remember not to checkin your GCS keyfile to a repository
